Add doc swagger
